--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build": "elm-land build"
   },
   "dependencies": {
-    "dexie": "^4.0.11"
+    "dexie": "^4.0.11",
+    "fuse.js": "^7.1.0"
   }
 }
